Altered appveyor for build

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,11 @@
 configuration: Release
+
 # restore NuGet packages before running MS Build
 before_build:
   - nuget restore
+  
+image: Visual Studio 2017
+
 # package Web Application project for Web Deploy
 build:
   verbosity: minimal
