--- a/bettercodehub.yml
+++ b/bettercodehub.yml
@@ -1,3 +1,3 @@
 exclude:
-- /TomKamphuis\.Web/webpack\.config\.js
-- /TomKamphuis\.Web/webpack\.config\.vendor\.js
+- .*/webpack\.config\.js
+- .*/webpack\.config\.vendor\.js
