--- a/bettercodehub.yml
+++ b/bettercodehub.yml
@@ -1,3 +1,8 @@
+component_depth: 1
+languages:
+- csharp
+- typescript
+- javascript
 exclude:
 - /TomKamphuis.Web/webpack.config.js
 - /TomKamphuis.Web/webpack.config.vendor.js
