Added products controller, changed tests, introduced mocking

--- a/TomKamphuis.Web/TomKamphuis.Web.csproj
+++ b/TomKamphuis.Web/TomKamphuis.Web.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TomKamphuis.Models\TomKamphuis.Models.csproj" />
+    <ProjectReference Include="..\TomKamphuis.Repositories\TomKamphuis.Repositories.csproj" />
   </ItemGroup>
 
   <Target Name="DebugRunWebpack" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('wwwroot\dist') ">
