Added cosmos db usage in code + some minor changes + removed some config files

--- a/TomKamphuis.Models/TomKamphuis.Models.csproj
+++ b/TomKamphuis.Models/TomKamphuis.Models.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.WindowsAzure.Storage">
+      <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\windowsazure.storage\8.1.4\lib\netstandard1.3\Microsoft.WindowsAzure.Storage.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
