--- a/TomKamphuis.Web/TomKamphuis.Web.csproj
+++ b/TomKamphuis.Web/TomKamphuis.Web.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
+    <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.0.1" />
   </ItemGroup>
 
   <ItemGroup>
